manifests/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskapp
  labels:
    app: backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskapp
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - backend
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: backend
          image: ghcr.io/ts-a-devops/taskapp-backend:5d6b8fc
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
